--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Item Viewer</title>
   </head>
   <body>
+    <p>Olá mundo!</p>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
